# signal-desktop-dns-fallback-extractor

./: Cargo.toml  README.md  dns-fallback.json
.github/workflows/: monitor.yml
src/: main.rs
