[package]
name = "signal-desktop-dns-fallback-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
asar = "0.3.0"
log = "0.4.21"
reqwest = "0.11.25"
semver = "1.0.22"
sh = "0.2.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
