[package]
name = "signal-desktop-dns-fallback-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
ar = "0.9.0"
asar = "0.3.0"
clap = { version = "4.5.2", features = ["derive"], default-features = false }
env_logger = "0.11.3"
log = "0.4.21"
lzma-rs = "0.3.0"
reqwest = "0.12"
semver = "1.0.22"
sh = "0.2.1"
tar = "0.4.40"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
